# src/api/index.ts
@@ -7,7 +7,13 @@ export { CancelablePromise, CancelError } from './core/CancelablePromise';
 export { OpenAPI } from './core/OpenAPI';
 export type { OpenAPIConfig } from './core/OpenAPI';
 
+export type { AdviceSchema } from './models/AdviceSchema';
+export type { ApiSmallGoalsSmallGoalIdReorderPostRequest } from './models/ApiSmallGoalsSmallGoalIdReorderPostRequest';
+export type { ApiSupportSendPost200Response } from './models/ApiSupportSendPost200Response';
+export type { ApiSupportUnreadStatusGet200Response } from './models/ApiSupportUnreadStatusGet200Response';
 export type { AvailabilitySchema } from './models/AvailabilitySchema';
+export type { CreateSubscriptionRequest } from './models/CreateSubscriptionRequest';
+export type { CreateSubscriptionResponse } from './models/CreateSubscriptionResponse';
 export type { DmMessagesSchema } from './models/DmMessagesSchema';
 export type { GrossProfitSchema } from './models/GrossProfitSchema';
 export type { LargeGoalSchema } from './models/LargeGoalSchema';
@@ -19,7 +25,9 @@ export type { OperatingProfitSchema } from './models/OperatingProfitSchema';
 export type { ReservationSchema } from './models/ReservationSchema';
 export type { SaleSchema } from './models/SaleSchema';
 export type { SettingSchema } from './models/SettingSchema';
+export type { SubscriptionSchema } from './models/SubscriptionSchema';
 export type { UserListSchema } from './models/UserListSchema';
 export type { UserSchema } from './models/UserSchema';
 
 export { Service } from './services/Service';
+export { StripeService } from './services/StripeService';
